--- a/sass/gt_tool.scss
+++ b/sass/gt_tool.scss
@@ -474,3 +474,29 @@
     }
   }
 }
+
+.tool-import{
+  padding: 5px;
+  background-color: #ececec;
+  color: #4d4d4d;
+  font-size: 11px;
+
+  display: grid;
+
+  overflow: auto;
+  grid-template-columns: 20px 20px minmax(50px, 100px) minmax(100px, auto) ;
+  .row {
+    display: contents;
+    cursor: pointer;
+
+    > div{
+      line-height: 1.5em;
+      vertical-align: middle;
+      padding: 2px;
+    }
+    &:hover div{
+      background-color: #fffdfd;
+
+    }
+  }
+}
