--- a/templates/gt/info-unit.html
+++ b/templates/gt/info-unit.html
@@ -74,7 +74,7 @@
     </div>
     <div class="row">
         <div>Firmware</div>
-        <div>{=device_model}<br>{=version} - {=protocol}</div>
+        <div>{=device_model} [ {=version} - {=protocol} ]</div>
     </div>
     <!--
     <div><input type="checkbox" data-follow="{=unitId}">Seguir</div>
