--- a/sass/gt_tool.scss
+++ b/sass/gt_tool.scss
@@ -489,7 +489,7 @@
     display: grid;
 
     overflow: auto;
-    grid-template-columns: 20px 20px minmax(50px, 100px) minmax(100px, auto);
+    grid-template-columns: 20px minmax(50px, 100px) minmax(100px, auto);
     .row {
       display: contents;
       cursor: pointer;
