--- a/templates/gt/info-unit-popup.html
+++ b/templates/gt/info-unit-popup.html
@@ -59,5 +59,9 @@
         <div data-detail="outputs" data-input-id="{=outputs.id}" data-input-value="{=outputs.on}"><span>{=outputs.name}</span><span data-input-value="{=outputs.value}">{=outputs.value}</span></div>
 
     </div>
+    <div class="row">
+        <div>último Event</div>
+        <div>{=myEvent}</div>
+    </div>
 
 </div>
