--- a/templates/gt/info-history.html
+++ b/templates/gt/info-history.html
@@ -1,38 +1,87 @@
-<div class="info-form">
-    
-    <div class="row">
-        <div>Fecha</div>
-        <div data-id="date_time"></div>
-    </div>
-    <div class="row">
-        <div>Position</div>
-        <div>
-            <span data-id="longitude"></span>, <span data-id="latitude"></span>
+<div class="info-form info-form-main">
+
+
+    <div class="unit-group">
+        <div class="name">{=unitName}</div>
+        <div class="body">
+            <div class="row">
+                <div>ID {=unitId}</div>
+                <div>{=device_name}</div>
+            </div>
+            <div class="row">
+                <div>Marca</div>
+                <div>{=brand}</div>
+            </div>
+
+            <div class="row">
+                <div>Modelo</div>
+                <div>{=model}</div>
+            </div>
+
+            <div class="row">
+                <div>Color</div>
+                <div>{=color}</div>
+            </div>
+
+            <div class="row">
+                <div>Matrícula</div>
+                <div>{=plate}</div>
+            </div><!--
+            <div class="row">
+                <div>Firmware</div>
+                <div>{=device_model} [ {=version} - {=protocol} ]</div>
+            </div>-->
         </div>
     </div>
     <div class="row">
-        <div>Velocidad</div>
-        <div data-id="speed"></div>
+        <div>Fecha</div>
+        <div>{=uDate}</div>
     </div>
     <div class="row">
-        <div>Orientación (°)</div>
-        <div data-id="heading"></div>
+        <div>Hora</div>
+        <div>{=uTime}</div>
+    </div>
+    <div class="row">
+        <div>Longitud</div>
+        <div>{=longitude}</div>
+    </div>
+    <div class="row">
+        <div>Latitud</div>
+        <div>{=latitude}</div>
+    </div>
+    <div class="row">
+        <div>Velocidad</div>
+        <div>{=speed}</div>
+    </div>
+    <div class="row">
+        <div>Orientación</div>
+        <div>{=heading}</div>
     </div>
     <div class="row">
         <div>Satelites</div>
-        <div data-id="satellite"></div>
+        <div>{=satellite}</div>
     </div>
+
     <div class="row">
         <div>Distancia Recorrida</div>
-        <div data-id="length"></div>
+        <div>{=length}</div>
     </div>
+
     <div class="row">
         <div>Distancia Total</div>
-        <div data-id="total_length"></div>
+        <div>{=total_length}</div>
     </div>
-    <div  class="row inputs" data-id="xinputs">
-        
+
+    <div class="inputs">
+        <div data-detail="inputs" data-input-id="{=inputs.id}" data-input-value="{=inputs.on}">
+            <span>{=inputs.name}</span><span data-input-value="{=inputs.value}">{=inputs.value}</span>
+        </div>
     </div>
-    
+    <div class="outputs">
+
+        <div data-detail="outputs" data-input-id="{=outputs.id}" data-input-value="{=outputs.on}"><span>{=outputs.name}</span><span data-input-value="{=outputs.value}">{=outputs.value}</span></div>
+
+    </div>
+    <div class="last-event">{=myEvent}</div>
 
 </div>
