--- a/templates/gt/info-unit.html
+++ b/templates/gt/info-unit.html
@@ -69,7 +69,7 @@
 
     </div>
     <div class="row">
-        <div>ültimo Event</div>
+        <div>Último Event</div>
         <div>{=myEvent}</div>
     </div>
     <div class="row">
