--- a/sass/gt_tool.scss
+++ b/sass/gt_tool.scss
@@ -506,38 +506,40 @@
   }
 }
 
-.trace-control {
-  .trace-grid {
-    position: relative;
-    //background-color: red;
-    color: rgb(145, 145, 145);
-    display: grid;
+.trace-grid {
+  color: rgb(145, 145, 145);
+  font-size: 11px;
+  line-height: 1.3em;
+  position: relative;
+  background-color: rgb(240, 240, 240);
+  color: rgb(145, 145, 145);
+  display: grid;
 
-    //overflow: auto;
-    grid-template-columns: 1fr 1fr 1fr;
-    .trace-header {
-      position: relative;
-      display: contents;
-      div {
-        background-color: rgb(5, 107, 114);
-        color: white;
-        text-align: center;
-      }
-    }
-    .trace-row:nth-child(2n + 1) {
-      div {
-        background-color: rgb(241, 241, 241);
-      }
-    }
-    .trace-row {
-      position: relative;
-      display: contents;
+  //overflow: auto;
+  grid-template-columns: auto auto 1fr;
+  grid-template-rows: auto;
+  .trace-header {
+    position: relative;
+    display: contents;
+    div {
+      background-color: rgb(5, 107, 114);
+      color: white;
       text-align: center;
-      &.now {
-        div {
-          background-color: rgb(5, 64, 153);
-          color: rgb(207, 207, 207);
-        }
+    }
+  }
+  .trace-row:nth-child(2n + 1) {
+    div {
+      background-color: rgb(241, 241, 241);
+    }
+  }
+  .trace-row {
+    position: relative;
+    display: contents;
+    text-align: center;
+    &.now {
+      div {
+        background-color: rgb(5, 64, 153);
+        color: rgb(207, 207, 207);
       }
     }
   }
