--- a/css/gt.css
+++ b/css/gt.css
@@ -865,7 +865,7 @@ form {
   content: " »";
 }
 
-.info-comm .main {
+.info-commNO .main {
   font-size: 10px;
   color: #f4f7e0;
   background-color: #3a3a3aa9;
@@ -880,97 +880,97 @@ form {
   overflow: hidden;
 }
 
-.info-comm .main .ftime,
-.info-comm .main .date {
+.info-commNO .main .ftime,
+.info-commNO .main .date {
   text-align: center;
 }
 
-.info-comm .main .btn-new {
+.info-commNO .main .btn-new {
   color: #1cbaf8;
   text-align: center;
   font-size: 10pt;
   font-weight: bold;
 }
 
-.info-comm .main .btn-delete {
+.info-commNO .main .btn-delete {
   color: #f0fa9a;
   text-align: center;
   font-size: 10pt;
 }
 
-.info-comm .main:hover {
+.info-commNO .main:hover {
   cursor: pointer;
   background-color: #000000;
 }
 
-.info-comm .main.new {
+.info-commNO .main.new {
   background-color: #a10c0ca9;
 }
 
-.info-comm .main.new:hover {
+.info-commNO .main.new:hover {
   background-color: #0000009c;
 }
 
-.info-comm .main .speed {
+.info-commNO .main .speed {
   text-align: right;
   background-color: rgba(54, 54, 54, 0.479);
 }
 
-.info-comm .main .speed:empty {
+.info-commNO .main .speed:empty {
   background-color: transparent;
 }
 
-.info-comm .main .type[data-type="1"] {
+.info-commNO .main .type[data-type="1"] {
   background-color: #49e202;
   color: white;
 }
 
-.info-comm .main .type[data-type="2"] {
+.info-commNO .main .type[data-type="2"] {
   background-color: #d1d1d1;
   color: #777777;
 }
 
-.info-comm .main .type[data-type="3"] {
+.info-commNO .main .type[data-type="3"] {
   background-color: #0d838b;
   color: white;
 }
 
-.info-comm .main .type[data-type="4"] {
+.info-commNO .main .type[data-type="4"] {
   background-color: #18e4f3;
   color: #5e5e5e;
 }
 
-.info-comm .main .type[data-type="5"] {
+.info-commNO .main .type[data-type="5"] {
   background-color: #f8f41c;
   color: red;
 }
 
-.info-comm .main .type[data-type="6"] {
+.info-commNO .main .type[data-type="6"] {
   background-color: #ff7f07;
   color: white;
 }
 
-.info-comm .main .type[data-type="7"] {
+.info-commNO .main .type[data-type="7"] {
   background-color: #f34bd7;
   color: white;
 }
 
-.info-comm .main .type[data-type="8"] {
+.info-commNO .main .type[data-type="8"] {
   background-color: #0d838b;
   color: white;
 }
 
-.info-comm .main > * {
+.info-commNO .main > * {
   padding: 2px;
 }
 
-.info-comm .main > :nth-child(4) {
+.info-commNO .main > :nth-child(4) {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
-.info-comm .main > .detail {
+.info-commNO .main > .detail {
   -ms-grid-column: 1;
   -ms-grid-column-span: 6;
   grid-column: 1/7;
@@ -979,11 +979,11 @@ form {
   background-color: rgba(209, 24, 24, 0.808);
 }
 
-.info-comm .main:not(.open) > .detail {
+.info-commNO .main:not(.open) > .detail {
   display: none;
 }
 
-.info-comm .main > .detail {
+.info-commNO .main > .detail {
   display: -ms-grid;
   display: grid;
   grid-gap: 4px;
@@ -1175,5 +1175,237 @@ form {
 .mark-tool-g2 div img {
   width: 100%;
   max-height: 100%;
+}
+
+.info-comm {
+  height: 100%;
+  overflow: auto;
+  text-transform: uppercase;
+}
+
+.info-comm.now {
+  background-color: #7c1806a9;
+}
+
+.info-comm.alarm {
+  background-color: #0a4952c0;
+}
+
+.info-comm.event {
+  background-color: #08796aa9;
+}
+
+.info-comm.alarm .grid, .info-comm.now .grid, .info-comm.event .grid {
+  font-size: 10px;
+  color: #f4f7e0;
+  padding: 4px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 16px minmax(50px, 70px) 50px minmax(60px, 1fr) 22px 50px 50px 60px;
+      grid-template-columns: 16px minmax(50px, 70px) 50px minmax(60px, 1fr) 22px 50px 50px 60px;
+  -ms-grid-rows: 1.4em;
+      grid-template-rows: 1.4em;
+  overflow: auto;
+  text-align: center;
+  overflow: hidden;
+}
+
+.info-comm.alarm .cell, .info-comm.now .cell, .info-comm.event .cell {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  padding: 2px;
+}
+
+.info-comm.alarm .row, .info-comm.now .row, .info-comm.event .row {
+  display: contents;
+}
+
+.info-comm.alarm .row .name,
+.info-comm.alarm .row .title, .info-comm.now .row .name,
+.info-comm.now .row .title, .info-comm.event .row .name,
+.info-comm.event .row .title {
+  text-align: left;
+}
+
+.info-comm.alarm .row:not(.open) > .info, .info-comm.now .row:not(.open) > .info, .info-comm.event .row:not(.open) > .info {
+  display: none;
+}
+
+.info-comm.alarm .row:not(.open) .btn-new:after, .info-comm.now .row:not(.open) .btn-new:after, .info-comm.event .row:not(.open) .btn-new:after {
+  content: "+";
+}
+
+.info-comm.alarm .row.open .btn-new:after, .info-comm.now .row.open .btn-new:after, .info-comm.event .row.open .btn-new:after {
+  content: "-";
+}
+
+.info-comm.alarm .row:hover, .info-comm.now .row:hover, .info-comm.event .row:hover {
+  cursor: pointer;
+}
+
+.info-comm.alarm .row:hover .cell,
+.info-comm.alarm .row:hover .btn-new, .info-comm.now .row:hover .cell,
+.info-comm.now .row:hover .btn-new, .info-comm.event .row:hover .cell,
+.info-comm.event .row:hover .btn-new {
+  color: aqua !important;
+  background-color: #000000be !important;
+}
+
+.info-comm.alarm .row:not(.new) .cell,
+.info-comm.alarm .row:not(.new) .btn-new, .info-comm.now .row:not(.new) .cell,
+.info-comm.now .row:not(.new) .btn-new, .info-comm.event .row:not(.new) .cell,
+.info-comm.event .row:not(.new) .btn-new {
+  color: #949494;
+}
+
+.info-comm.alarm .row .speed, .info-comm.now .row .speed, .info-comm.event .row .speed {
+  text-align: right;
+  background-color: rgba(158, 13, 13, 0.479);
+  text-align: center;
+}
+
+.info-comm.alarm .row .speed:empty, .info-comm.now .row .speed:empty, .info-comm.event .row .speed:empty {
+  background-color: transparent;
+}
+
+.info-comm.alarm .info, .info-comm.now .info, .info-comm.event .info {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 8;
+  grid-column: 1/9;
+  background-color: #254605;
+}
+
+.info-comm.alarm .info:after, .info-comm.now .info:after, .info-comm.event .info:after {
+  content: "INFORMATION";
+}
+
+.info-comm .main {
+  font-size: 10px;
+  color: #f4f7e0;
+  background-color: #3a3a3aa9;
+  padding: 1px;
+  display: -ms-grid;
+  display: grid;
+  grid-gap: 0px;
+  -ms-grid-columns: 16px minmax(70px, 90px) 50px 80px 20px auto;
+      grid-template-columns: 16px minmax(70px, 90px) 50px 80px 20px auto;
+  -ms-grid-rows: 1.4em auto;
+      grid-template-rows: 1.4em auto;
+  overflow: hidden;
+}
+
+.info-comm .main .ftime,
+.info-comm .main .date {
+  text-align: center;
+}
+
+.info-comm .main .btn-new {
+  color: #1cbaf8;
+  text-align: center;
+  font-size: 10pt;
+  font-weight: bold;
+}
+
+.info-comm .main .btn-delete {
+  color: #f0fa9a;
+  text-align: center;
+  font-size: 10pt;
+}
+
+.info-comm .main:hover {
+  cursor: pointer;
+  background-color: #000000;
+}
+
+.info-comm .main.new {
+  background-color: #a10c0ca9;
+}
+
+.info-comm .main.new:hover {
+  background-color: #0000009c;
+}
+
+.info-comm .main .speed {
+  text-align: right;
+  background-color: rgba(54, 54, 54, 0.479);
+}
+
+.info-comm .main .speed:empty {
+  background-color: transparent;
+}
+
+.info-comm .main .type[data-type="1"] {
+  background-color: #49e202;
+  color: white;
+}
+
+.info-comm .main .type[data-type="2"] {
+  background-color: #d1d1d1;
+  color: #777777;
+}
+
+.info-comm .main .type[data-type="3"] {
+  background-color: #0d838b;
+  color: white;
+}
+
+.info-comm .main .type[data-type="4"] {
+  background-color: #18e4f3;
+  color: #5e5e5e;
+}
+
+.info-comm .main .type[data-type="5"] {
+  background-color: #f8f41c;
+  color: red;
+}
+
+.info-comm .main .type[data-type="6"] {
+  background-color: #ff7f07;
+  color: white;
+}
+
+.info-comm .main .type[data-type="7"] {
+  background-color: #f34bd7;
+  color: white;
+}
+
+.info-comm .main .type[data-type="8"] {
+  background-color: #0d838b;
+  color: white;
+}
+
+.info-comm .main > * {
+  padding: 2px;
+}
+
+.info-comm .main > :nth-child(4) {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.info-comm .main > .detail {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 6;
+  grid-column: 1/7;
+  -ms-grid-row: 2;
+  grid-row: 2;
+  background-color: rgba(209, 24, 24, 0.808);
+}
+
+.info-comm .main:not(.open) > .detail {
+  display: none;
+}
+
+.info-comm .main > .detail {
+  display: -ms-grid;
+  display: grid;
+  grid-gap: 4px;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: auto auto;
+      grid-template-rows: auto auto;
 }
 /*# sourceMappingURL=gt.css.map */
