--- a/sass/gt.scss
+++ b/sass/gt.scss
@@ -767,7 +767,7 @@ form {
     }
   }
 }
-.info-comm {
+.info-commNO {
   .main {
     font-size: 10px;
     color: rgb(244, 247, 224);
@@ -1060,6 +1060,226 @@ form {
     img {
       width: 100%;
       max-height: 100%;
+    }
+  }
+}
+
+.info-comm {
+  height: 100%;
+  overflow: auto;
+  text-transform: uppercase;
+  &.now {
+    background-color: #7c1806a9;
+  }
+  &.alarm {
+    background-color: #0a4952c0;
+  }
+  &.event {
+    background-color: #08796aa9;
+  }
+  &.alarm,
+  &.now,
+  &.event {
+    .grid {
+      font-size: 10px;
+      color: rgb(244, 247, 224);
+
+      padding: 4px;
+      display: grid;
+      //grid-gap: 4px;
+      grid-template-columns: 16px minmax(50px, 70px) 50px minmax(60px, 1fr) 22px 50px 50px 60px;
+      grid-template-rows: 1.4em;
+      overflow: auto;
+      text-align: center;
+      overflow: hidden;
+      //height: 100%;
+    }
+    .cell {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+      padding: 2px;
+    }
+    .row {
+      display: contents;
+      .user.cell {
+        //background-color: red;
+      }
+      .name,
+      .title {
+        text-align: left;
+      }
+      &:not(.open) {
+        > .info {
+          display: none;
+          //height: 0px;
+        }
+        .btn-new:after {
+          content: "+";
+        }
+      }
+      &.open {
+        .btn-new:after {
+          content: "-";
+        }
+      }
+      &.new {
+        .cell {
+          // background-color: #68be16 !important;
+        }
+      }
+      &:hover {
+        cursor: pointer;
+
+        .cell,
+        .btn-new {
+          //color: #949494;
+          color: aqua !important;
+          background-color: #000000be !important;
+        }
+      }
+      &:not(.new) {
+        .cell,
+        .btn-new {
+          color: #949494;
+          //background-color: #e7e7e76c !important;
+        }
+      }
+      .speed {
+        text-align: right;
+        background-color: rgba(158, 13, 13, 0.479);
+        text-align: center;
+
+        &:empty {
+          background-color: transparent;
+        }
+      }
+    }
+
+    .info {
+      grid-column: 1/9;
+      background-color: rgb(37, 70, 5);
+      &:after {
+        content: "INFORMATION";
+      }
+    }
+  }
+
+  .main {
+    font-size: 10px;
+    color: rgb(244, 247, 224);
+    background-color: #3a3a3aa9;
+    padding: 1px;
+    display: grid;
+    grid-gap: 0px;
+    grid-template-columns: 16px minmax(70px, 90px) 50px 80px 20px auto;
+    grid-template-rows: 1.4em auto;
+    overflow: hidden;
+
+    .ftime,
+    .date {
+      text-align: center;
+    }
+    .btn-new {
+      color: #1cbaf8;
+      text-align: center;
+      font-size: 10pt;
+      font-weight: bold;
+    }
+    .btn-delete {
+      color: #f0fa9a;
+      text-align: center;
+      font-size: 10pt;
+      //font-weight: bold;
+    }
+    &:hover {
+      cursor: pointer;
+      background-color: #000000;
+      //color:rgb(174, 236, 255);
+    }
+    &.new {
+      background-color: #a10c0ca9;
+      &:hover {
+        background-color: #0000009c;
+      }
+    }
+    .speed {
+      text-align: right;
+      background-color: rgba(54, 54, 54, 0.479);
+      &:empty {
+        background-color: transparent;
+      }
+    }
+    .type {
+      &[data-type="1"] {
+        background-color: #49e202;
+        color: white;
+      }
+      &[data-type="2"] {
+        background-color: #d1d1d1;
+        color: rgb(119, 119, 119);
+      }
+      &[data-type="3"] {
+        background-color: #0d838b;
+        color: white;
+      }
+      &[data-type="4"] {
+        background-color: #18e4f3;
+        color: rgb(94, 94, 94);
+      }
+      &[data-type="5"] {
+        background-color: #f8f41c;
+        color: rgb(255, 0, 0);
+      }
+      &[data-type="6"] {
+        background-color: #ff7f07;
+        color: white;
+      }
+      &[data-type="7"] {
+        background-color: #f34bd7;
+        color: white;
+      }
+      &[data-type="8"] {
+        background-color: #0d838b;
+        color: white;
+      }
+    }
+
+    > * {
+      padding: 2px;
+      //border:1px solid yellow;
+    }
+
+    > :nth-child(4) {
+      //word-wrap: normal;
+      white-space: nowrap;
+      overflow: hidden;
+
+      text-overflow: ellipsis;
+    }
+    > .detail {
+      grid-column: 1/7;
+      grid-row: 2;
+
+      background-color: rgba(209, 24, 24, 0.808);
+    }
+    &:not(.open) {
+      > .detail {
+        display: none;
+      }
+    }
+    &.open {
+      > :nth-child(6) {
+        //display: none;
+      }
+    }
+
+    > .detail {
+      display: grid;
+      grid-gap: 4px;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: auto auto;
     }
   }
 }
