--- a/sass/gt.scss
+++ b/sass/gt.scss
@@ -1094,6 +1094,27 @@ form {
   overflow: auto;
   text-transform: uppercase;
 
+  .ev-210 {
+    .title {
+      color: rgb(248, 195, 23);
+      font-weight: bold;
+    }
+    .title::before {
+      content: "« ";
+    }
+  }
+
+  .ev-209,
+  .ev-211 {
+    .title {
+      color: rgb(112, 199, 31);
+      font-weight: bold;
+    }
+    .title::after {
+      content: " »";
+    }
+  }
+
   &.unit:not(.play) {
     &.now {
       background-color: #878888a9;
