--- a/sass/gt.scss
+++ b/sass/gt.scss
@@ -1148,6 +1148,10 @@ form {
       overflow: hidden;
       //height: 100%;
     }
+
+    .grid:hover {
+      grid-template-columns: 16px minmax(50px, 100px) 50px minmax(120px, 1fr) 22px 50px 50px 60px;
+    }
     .cell {
       overflow: hidden;
       text-overflow: ellipsis;
