--- a/css/gt.css
+++ b/css/gt.css
@@ -1265,6 +1265,11 @@ form {
   overflow: hidden;
 }
 
+.info-comm.alarm .grid:hover, .info-comm.event .grid:hover {
+  -ms-grid-columns: 16px minmax(50px, 100px) 50px minmax(120px, 1fr) 22px 50px 50px 60px;
+      grid-template-columns: 16px minmax(50px, 100px) 50px minmax(120px, 1fr) 22px 50px 50px 60px;
+}
+
 .info-comm.alarm .cell, .info-comm.event .cell {
   overflow: hidden;
   text-overflow: ellipsis;
